<resources>
    <string name="app_name">Pengu Widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="error_fetching_pengu">Failed to fetch pengu</string>
    <string name="pengu_layers">Pengu Layers</string>
    <string name="heart_level">Heart Level</string>
    <string name="o">O</string>
    <string name="f">F</string>
    <string name="hunger_preview">Hunger Preview</string>
    <string name="a">A</string>
    <string name="u">U</string>
</resources>